# SelfLLMWiki

./: .gitignore  CLAUDE.md  PROCESS.md  README.md  config.yaml  review.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/prompts/: expansion.md  ingest.md  lint.md  paper_extract.md  query.md
backend/app/routers/: deposit.py  ingest.py  lint.py  log.py  papers.py  query.py  raw.py  web.py  wiki.py
backend/app/services/: graph_builder.py  html_converter.py  ingest_service.py  json_utils.py  lint_service.py  llm.py  paper_pipeline.py  paper_search.py  pdf_converter.py  query_service.py  web_search.py  wiki_manager.py
data/: SCHEMA.md
data/wiki/: index.md  log.md  overview.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue  router.ts
frontend/src/api/: client.ts
frontend/src/components/: MarkdownRenderer.vue  StatusBar.vue
frontend/src/stores/: app.ts
frontend/src/views/: GraphView.vue  IngestView.vue  LintView.vue  LogView.vue  PaperDiscovery.vue  QueryView.vue  RawView.vue  WikiView.vue
